trustfall_core/test_data/tests/parse_errors/duplicate_recurse.parse-error.ron
Err(UnsupportedDuplicatedDirective("@recurse", Pos(
  line: 4,
  column: 55,
)))
